--- a/assets/css/css_media/main_page_media.css
+++ b/assets/css/css_media/main_page_media.css
@@ -14,6 +14,14 @@
     }
     .parallax {
         height: 500px;
+        background-attachment: fixed;
+        width: 100%;
+        height: 700px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        text-align: center;
+        cursor: default;
     }
     .container-text {
         padding: 100px;
