--- a/assets/css/css/main_page.css
+++ b/assets/css/css/main_page.css
@@ -133,6 +133,17 @@ main {
     cursor: default;
 }
 
+#parallax {
+    background-attachment: fixed;
+    width: 100%;
+    height: 700px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+    cursor: default;
+}
+
 #parallax1 {
     background-image: url(../../images/13.jpeg);
 }
