--- a/assets/css/css/main_page.css
+++ b/assets/css/css/main_page.css
@@ -126,6 +126,7 @@ main {
     width: 100%;
     height: 700px;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
     background-position: center;
     text-align: center;
